--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "seating-plan",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://github.com/PaulHermes/Seating-Plan",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "file-saver": "^2.0.5",
@@ -16,6 +19,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.0",
+    "gh-pages": "^6.3.0",
     "vite": "^7.1.4",
     "vite-plugin-pwa": "^1.0.0"
   }
